Fix for screen shift when selecting from large taxonomy.

--- a/src/scss/framework.scss
+++ b/src/scss/framework.scss
@@ -13,6 +13,7 @@
     width: 100%;
     margin: auto;
     display: block;
+    position: relative;
 }
 .extra-space-for-scroll {
     height: 200px;
